// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`avroToTypeScript it should generate an interface 1`] = `
"export enum numberEnumType { ONE = 'ONE', TWO = 'TWO' };

export interface AllocsType {
	allocAccount: null | string;
	noNestedPartyIDs: null | number;
	allocQty: null | number;
}

export interface Option1 {
	id: string;
	refKey: string;
}

export interface Option2 {
	id: string;
	orderNumber: string;
	quantity: number;
}

export interface ExampleType {
	unionEnum: null | string | numberEnumType;
	mandatoryString: string;
	adouble: null | number;
	astring: null | string;
	amap: null | string | { [index:string]:numberEnumType };
	recordArray: null | AllocsType[];
	unionRecord: null | Option1 | Option2;
	processCode: null | string;
	named: null | AllocsType;
	fixedField: Uint8Array;
}
"
`;

exports[`avroToTypeScript it should generate an interface with auto-wrapped unions 1`] = `
"export enum numberEnumType { ONE = 'ONE', TWO = 'TWO' };

export interface AllocsType {
	allocAccount: null | string;
	noNestedPartyIDs: null | number;
	allocQty: null | number;
}

export interface Option1 {
	id: string;
	refKey: string;
}

export interface Option2 {
	id: string;
	orderNumber: string;
	quantity: number;
}

export interface ExampleType {
	unionEnum: { "null": null } | { "string": string } | { "avro-typescript.numberEnumType": numberEnumType };
	mandatoryString: string;
	adouble: null | number;
	astring: null | string;
	amap: null | string | { [index:string]:numberEnumType };
	recordArray: null | AllocsType[];
	unionRecord: { "null": null } | { "avro-typescript.Option1": Option1 } | { "avro-typescript.Option2": Option2 };
	processCode: null | string;
	named: { "null": null } | { "AllocsType": AllocsType };
	fixedField: Uint8Array;
}
"
`;

exports[`avroToTypeScript it should generate an interface with wrapped unions 1`] = `
"export enum numberEnumType { ONE = 'ONE', TWO = 'TWO' };

export interface AllocsType {
	allocAccount: { "null": null } | { "string": string };
	noNestedPartyIDs: { "null": null } | { "long": number };
	allocQty: { "null": null } | { "double": number };
}

export interface Option1 {
	id: string;
	refKey: string;
}

export interface Option2 {
	id: string;
	orderNumber: string;
	quantity: number;
}

export interface ExampleType {
	unionEnum: { "null": null } | { "string": string } | { "avro-typescript.numberEnumType": numberEnumType };
	mandatoryString: string;
	adouble: { "null": null } | { "double": number };
	astring: { "null": null } | { "string": string };
	amap: { "null": null } | { "string": string } | { "map": { [index:string]:numberEnumType } };
	recordArray: { "null": null } | { "array": AllocsType[] };
	unionRecord: { "null": null } | { "avro-typescript.Option1": Option1 } | { "avro-typescript.Option2": Option2 };
	processCode: { "null": null } | { "string": string };
	named: { "null": null } | { "AllocsType": AllocsType };
	fixedField: Uint8Array;
}
"
`;

exports[`avroToTypeScript it should support overriding logical types 1`] = `
"export interface logicalOverrides {
	eventDate: Date;
	startTime: Date;
	displayTime: string;
}
"
`;

exports[`enumToTypesScript it should generate an enum 1`] = `
"export enum CompanySize { SMALL = 'SMALL', MEDIUM = 'MEDIUM', LARGE = 'LARGE' };
"
`;
